# backend

./: .env.example  .gitignore  README.md  deploy-to-render.sh  docker-compose.yml  test-deployment.sh
apps/ai-python/: .env.example  .gitignore  Dockerfile  Dockerfile.render  README.md  eval_dataset.jsonl  experiment_results.json  experiment_runner.py  openapi.yaml  pyproject.toml  render-build.sh  requirements.txt  run_tests.bat  run_tests.sh
apps/ai-python/docs/: EVALUATION_SYSTEM_SUMMARY.md  EXPERIMENT_GUIDE.md  EXPERIMENT_QUICKSTART.md
apps/ai-python/src/: __init__.py  choice_evaluator.py  config.py  exception_handlers.py  json_utils.py  llm_provider.py  main.py  middleware.py  models.py  opik_tracer.py  scenario_generator.py
apps/ai-python/src/routers/: adventure.py
apps/ai-python/tests/: conftest.py  test_api.py  test_models.py
apps/api-ts/: .env.example  .gitignore  Dockerfile  Dockerfile.render  README.md  package-lock.json  package.json  render-build.sh  start.sh
apps/api-ts/assets/: placeholder-character.txt
apps/api-ts/src/: app.module.ts  main.ts  (+2 more)
docs/: API_DOCUMENTATION_SUMMARY.md  API_PATH_UPDATE.md  API_TESTING_GUIDE.md  DEPLOYMENT_SUMMARY.txt  DOCUMENTATION_COMPLETION.md  ENV_VARIABLES_RENDER.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.txt  RENDER_DEPLOY.txt  SWAGGER_GUIDE.md  TASKS_11-15_COMPLETION.md  TASKS_16-21_COMPLETION.md  TROUBLESHOOTING.txt
postman/: SaverFox-AI-Service.postman_collection.json  SaverFox-API-Production.postman_environment.json  SaverFox-API.postman_collection.json  SaverFox-API.postman_environment.json
(+79 files in other folders)
